5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1649_1055.log
== SUBMITION (2019-04-15 00:14:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a=float(input("v0:"))
b=float(input("valor do angulo:"))
c=float(input("distancia do passaro ao porco:"))
b2=(radians(b))
eq=(((a)**2)*sin(2*b2))/9.8
d=abs(eq-c)
if(d<0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.144156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 7, in <module>
    b2=(radians(b))
NameError: name 'radians' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:15:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
a=float(input("v0:"))
b=float(input("valor do angulo:"))
c=float(input("distancia do passaro ao porco:"))
b2=(radians(b))
eq=(((a)**2)*sin(2*b2))/9.8
d=abs(eq-c)
if(d<0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.165595
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
